<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General -->
    <string name="app_name">GPS Auto Dashboard</string>

    <!-- Shared/common -->
    <string name="close">Close</string>

    <!-- Navigation Drawer -->
    <string name="title_section_dashboard">Dashboard</string>
    <string name="title_section_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Options Menu -->
    <string name="title_option_about">About</string>

    <!-- Dashboard -->
    <string name="speed_value">---</string>
    <string name="speed_unit">MPH</string>

    <string name="latitude_title">Latitude:</string>
    <string name="latitude_value">---</string>
    <string name="latitude_unit">°</string>

    <string name="longitude_title">Longitude:</string>
    <string name="longitude_value">---</string>
    <string name="longitude_unit">°</string>

    <string name="altitude_title">Altitude:</string>
    <string name="altitude_value">---</string>
    <string name="altitude_unit">ft</string>

    <string name="distance_title">Distance:</string>
    <string name="distance_value">---</string>
    <string name="distance_unit">mi</string>

    <string name="acceleration_title">Acceleration:</string>
    <string name="acceleration_value">---</string>
    <string name="acceleration_unit">m/s&#178;</string>

    <!-- Preferences -->
    <string name="pref_title_gps_settings">Global Positioning System (GPS)</string>

    <string name="pref_title_dist_acc_min">Minimum accuracy for distance</string>
    <string name="pref_summary_dist_acc_min">&#160;meters minimum accuracy to begin recording distance</string>
    <string name="pref_value_dist_acc_min">15</string>

    <string name="pref_title_accel_settings">Acceleration Widget</string>

    <string name="pref_title_max_neg_accel">Largest negative acceleration</string>
    <string name="pref_summary_max_neg_accel">&#160;m/s&#178; largest negative acceleration for mapping the acceleration widget percentage</string>
    <string name="pref_value_max_neg_accel">2.5</string>

    <string name="pref_title_max_pos_accel">Largest positive acceleration</string>
    <string name="pref_summary_max_pos_accel">&#160;m/s&#178; largest positive acceleration for mapping the acceleration widget percentage</string>
    <string name="pref_value_max_pos_accel">2.5</string>

    <!-- Dialogs -->
    <string name="about_dialog">About</string>
    <string name="about_dialog_title">About GPS Auto Dashboard</string>
    <string name="about_dialog_message">GPS Auto Dashboard 1.0\n\nCreated by: Zach Rohde\n\nFor more information visit my website!</string>
    <string name="about_website">Visit ZachRohde.com</string>

    <!-- Errors -->
    <string name="gps_disabled">Please enable GPS before using this application.</string>
    <string name="log_gps_disabled">GPS was disabled while the app was running, attempting to restart GPS.</string>
    <string name="log_stop_location_manager">Failed to stop Location Manager.</string>

</resources>
